--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.6.5",
+    "@types/uuid": "^8.3.4",
     "aws-cdk": "^2.36.0",
     "aws-cdk-lib": "^2.36.0",
     "constructs": "^10.1.71",
@@ -20,7 +21,8 @@
   },
   "dependencies": {
     "@k-foss/ts-esnode": "^2.0.2",
-    "@types/uuid": "^8.3.4",
+    "@types/aws-lambda": "^8.10.102",
+    "aws-sdk": "^2.1191.0",
     "uuid": "^8.3.2"
   }
 }
