crude functions completed

--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@k-foss/ts-esnode": "^2.0.2",
     "@types/aws-lambda": "^8.10.102",
-    "aws-sdk": "^2.1191.0",
-    "uuid": "^8.3.2"
+    "aws-sdk": "^2.1191.0"
   }
 }
